force-app/main/default/objects/custom_create38__c/custom_create38__c.object-meta.xml
<CustomObject>
    <label>Custom created object38</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects38</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>