force-app/main/default/objects/custom_create38__c/fields/custom_create_38field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_38field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 38field525</label>
    <type>Checkbox</type>
</CustomField>